Profile : Responsive lists, fixed size box, overflow

--- a/src/assets/scss/views/_browser.scss
+++ b/src/assets/scss/views/_browser.scss
@@ -17,6 +17,8 @@
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
         min-width: 260px;
+        height: 200px;
+        overflow: scroll;
         grid-column-gap: 20px;
         grid-row-gap: 20px;
         margin-top: 30px;
@@ -25,7 +27,8 @@
 .exercise{
     display: block;
     padding: 5px;
-    min-height: 100px;
+    height: 200px;
+    overflow: scroll;
     box-shadow: 0 0 1px 1px lightgray;
     border-radius: 4px;
     background-color: whitesmoke; 
