--- a/src/assets/scss/views/_profileView.scss
+++ b/src/assets/scss/views/_profileView.scss
@@ -96,7 +96,7 @@
     &__series{        
         display: grid;
         margin: 20px 15px 0 15px;
-        grid-template-columns: repeat(5,1fr);
+        grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
         grid-gap: 10px;
 
         .serie{
@@ -113,7 +113,7 @@
     &__exercises{
         display: grid;
         margin: 20px 15px 0 15px;
-        grid-template-columns: repeat(5,1fr);
+        grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
         grid-gap: 10px;
 
         .exercise-container{    
@@ -157,27 +157,6 @@
                 &:hover{
                     background-color: gray;
                 }
-            }
-        }
-    }
-
-    &__series{
-        
-        display: grid;
-        grid-template-columns: repeat(5,1fr);
-        grid-gap: 10px;
-        margin-top: 20px;
-
-        .serie{
-            border:1px solid #e4e4e4;
-            padding: 10px;
-            display: block;
-
-            h4 {
-                font-weight: bold;
-                font-size: 1.15em;
-                text-align:center;
-                margin-bottom: 10px;
             }
         }
     }
